# MoDirect-Analysis

./: .gitignore  README.md  pyproject.toml
assets/concept_vectors/: baseline_obj_color.pt  baseline_obj_place.pt  baseline_shape_color.pt  baseline_shape_place.pt  vanilla_obj_color.pt  vanilla_obj_place.pt  vanilla_shape_color.pt  vanilla_shape_place.pt
assets/vision_axes/: vision_axes.npz  vision_axes_baseline_IN.npz  vision_axes_baseline_OP.npz  vision_axes_delta_IN.npz  vision_axes_delta_OP.npz
configs/: models.yaml  paths.example.yaml
core/: __init__.py  data_pipeline.py  dataset_loader.py  lmms_gen.py  methods.py  model_loader.py  utils.py
docs/: lab-notebook.md  report.md
docs/archive/: KSH-analysis-report.md
experiments/upstream/: information_flow.py  video_information_flow.py
legacy/linear_probing_before_llm/: extract_features.py  linear_probe.py
legacy/linear_probing_per_layer/: extract_answer_features.py  extract_vision_features.py  linear_probe.py
legacy/utils_addon/: acc.py  ans.py  par2json.py  plot_correct.py  plot_one.py  plot_prob.py
modirect/: __init__.py
modirect/concepts/: __init__.py  axes.py  types.py
modirect/config/: __init__.py  directions.py  paths.py  registry.py  stages.py
modirect/interventions/: __init__.py  hooks.py  operators.py
modirect/io/: __init__.py  concept_store.py  feature_store.py
modirect/models/: __init__.py  loader.py
modirect/probing/: __init__.py  linear.py  targets.py
modirect/tasks/: __init__.py  registry.py  schema.py
pipeline/02_probe/: linear_probe.py  mechanism_analysis.py  probe_analysis.py
pipeline/04_concepts/: 01_canonicalize_dataset.py  02_extract_avg_hidden.py  11_extract_per_identity.py  validate_pure_direction.py
pipeline/05_intervene/: causal_intervention.py  delta_effect_analysis.py  direction_steering.py
pipeline/06_readout/: 05_readout_alignment.py  decoding_gap.py  decoding_gap_analysis.py  decoding_gap_mcq.py  lm_head_align.py  logit_lens.py  mcq_logit_lens_1500.py
pipeline/07_figures/: 10_plot_all.py  plot_attn_vs_mlp.py  plot_axis_alignment.py  plot_cross_task_pipeline.py  plot_cross_task_probing.py  plot_cross_task_ve_ap_matrices.py  plot_position_direction_object.py  plot_within_task_dim_sharing.py  update_answer_probe_plots.py  visualize_attention.py
tasks/E2E_real_VP/: E2E_real_VP.yaml  E2E_real_VP_Colored_area.yaml  E2E_real_VP_Colored_edge.yaml  E2E_real_VP_default.yaml  E2E_real_VP_default_8way.yaml  E2E_real_VP_real_shape.yaml  E2E_real_VP_shape_realbg.yaml  E2E_real_VP_text.yaml  default.yaml  utils.py
tasks/activitynetqa/: activitynetqa.yaml  utils.py
tasks/direction_testbed_ablation/: _default_template_yaml  direction_testbed_ablation.yaml  direction_testbed_ablation_2H.yaml  direction_testbed_ablation_2V.yaml  direction_testbed_ablation_4way.yaml  direction_testbed_ablation_8way.yaml  utils.py
tasks/extrapolation_bench/: _default_template_yaml  extrapolation_bench.yaml  extrapolation_bench_kth.yaml  extrapolation_bench_kth_vp_default.yaml  extrapolation_bench_mvbench.yaml  extrapolation_bench_mvbench_counterfactual_inference.yaml  extrapolation_bench_mvbench_moving_attribute.yaml  extrapolation_bench_mvbench_moving_direction.yaml  extrapolation_bench_mvbench_object_shuffle.yaml  extrapolation_bench_ssv2.yaml  extrapolation_bench_ssv2_vp_default.yaml  extrapolation_bench_synthetic.yaml  extrapolation_bench_synthetic_2obj_direction.yaml  extrapolation_bench_synthetic_counterfactual_direction.yaml  extrapolation_bench_synthetic_mover_direction.yaml  extrapolation_bench_synthetic_multi_obj_direction.yaml  extrapolation_bench_synthetic_multi_object_relationship.yaml  extrapolation_bench_synthetic_object_state.yaml  extrapolation_bench_synthetic_parallel_recog.yaml  extrapolation_bench_synthetic_single_object_direction.yaml  extrapolation_bench_synthetic_static_identification.yaml  extrapolation_bench_synthetic_trajectory_extrapolation.yaml  extrapolation_bench_synthetic_trajectory_extrapolation_w_direction.yaml  extrapolation_bench_tempcompass.yaml  extrapolation_bench_tempcompass_direction.yaml  extrapolation_bench_tempcompass_direction_caption_matching.yaml  extrapolation_bench_tempcompass_direction_captioning.yaml  extrapolation_bench_tempcompass_direction_multi_choice.yaml  extrapolation_bench_tempcompass_direction_yes_no.yaml  extrapolation_bench_tempcompass_speed.yaml  extrapolation_bench_tempcompass_speed_caption_matching.yaml  extrapolation_bench_tempcompass_speed_captioning.yaml  extrapolation_bench_tempcompass_speed_multi_choice.yaml  extrapolation_bench_tempcompass_speed_yes_no.yaml  extrapolation_bench_tomato.yaml  (+23 more)
tasks/mvbench/: mvbench.yaml  (+2 more)
tests/: test_concepts.py  test_interventions.py  test_layout.py
(+126 files in other folders)
